--- a/front-end/src/css/main.css
+++ b/front-end/src/css/main.css
@@ -18,7 +18,7 @@
 }
 
 .is-table {
-  max-width: 40em !important;
+  max-width: 50em !important;
   overflow: hidden !important;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .separator-line {
-  width: 40em;
+  max-width: 50em;
   border-bottom: 2px solid darkgray;
   margin-left: auto;
   margin-right: auto;
